framec_tests/language_specific/typescript/v3_outline/positive/basic_outline.frm
@target typescript

system S {
    actions:
        doIt() {
            // native body
        }
}
