framec_tests/language_specific/typescript/v3_outline/negative/multi_issue_outline_tolerant.frm
@target typescript

system S {
    machine:
        $A
        e() {
            => $^ oops;
            -> $ZZ();
        }
}

